Unit tests p/ CategoryServiceImpl | Integration tests p/ fetch all categories